--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
-body {
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+html, body {
+  font-family: 'Lato';
+  height: 100%;
   margin: 0;
   padding: 0;
 }
